@@ -3,6 +3,7 @@ package com.example.everyhealth.controller;
 
 import com.example.everyhealth.domain.ChatMessage;
 import com.example.everyhealth.dto.ChatMessageResponseDto;
+import com.example.everyhealth.dto.ChatMessageSaveDto;
 import com.example.everyhealth.dto.MemberChatResponseDto;
 import com.example.everyhealth.service.ChatMessageService;
 import lombok.RequiredArgsConstructor;
@@ -19,6 +20,7 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestParam;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 @RequiredArgsConstructor
@@ -29,24 +31,20 @@ public class RestChatController {
 
     @MessageMapping("/chat/rooms/{roomId}/send")
     @SendTo("/topic/public/rooms/{roomId}")
-    public ResponseEntity<ChatMessageResponseDto> sendMessage(@DestinationVariable Long roomId, @Payload String message, SimpMessageHeaderAccessor headerAccessor) {
+    public ResponseEntity<ChatMessageSaveDto> sendMessage(@DestinationVariable Long roomId, @Payload String message, SimpMessageHeaderAccessor headerAccessor) {
         Long memberId = (Long) headerAccessor.getSessionAttributes().get("memberId");
 
-        ChatMessageResponseDto chatMessageResponseDto = chatMessageService.saveMessage(message, roomId, memberId);
+        ChatMessageSaveDto chatMessageSaveDto = chatMessageService.saveMessage(message, roomId, memberId);
 
-        return ResponseEntity.ok().body(chatMessageResponseDto);
+        return ResponseEntity.ok().body(chatMessageSaveDto);
     }
 
     @GetMapping("/api/rooms/{roomId}/recentMessage")
     public ResponseEntity<List<ChatMessageResponseDto>> recentMessage(@RequestParam(defaultValue = "10") int limit, @PathVariable Long roomId) {
         List<ChatMessage> byRecentMessage = chatMessageService.findByRecentMessage(roomId, limit);
         List<ChatMessageResponseDto> chatMessageList = byRecentMessage.stream()
-                .map(m -> new ChatMessageResponseDto(
-                        m.getMessage(),
-                        m.getId(),
-                        new MemberChatResponseDto(m.getClubMember().getMember().getId(), m.getClubMember().getMember().getName(), m.getClubMember().getMember().getPicture()),
-                        m.getCreatedDate()))
-                .toList();
+                .map(m -> new ChatMessageResponseDto(m))
+                .collect(Collectors.toList());
 
         return ResponseEntity.ok().body(chatMessageList);
     }
@@ -58,12 +56,8 @@ public class RestChatController {
             @RequestParam(required = false) Long messageId) {
         List<ChatMessage> olderMessages = chatMessageService.findOlderMessages(roomId, messageId, limit);
         List<ChatMessageResponseDto> list = olderMessages.stream()
-                .map(m -> new ChatMessageResponseDto(
-                        m.getMessage(),
-                        m.getId(),
-                        new MemberChatResponseDto(m.getClubMember().getMember().getId(), m.getClubMember().getMember().getName(), m.getClubMember().getMember().getPicture()),
-                        m.getCreatedDate()))
-                .toList();
+                .map(m -> new ChatMessageResponseDto(m))
+                .collect(Collectors.toList());
 
         return ResponseEntity.ok().body(list);
     }
